--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </tr>
   <tr>
     <td><strong>Education</strong></td>
-    <td><a href="http://www.clemson.edu/ces/departments/ie/">B.S. in I.E.</a> from <a href="https://www.youtube.com/watch?v=EbvtdXHXaLU"></a>Clemson University</a></td>
+    <td><a href="http://www.clemson.edu/ces/departments/ie/">B.S. in I.E.</a> from <a href="https://www.youtube.com/watch?v=EbvtdXHXaLU">Clemson University</a></td>
   </tr>
   <tr>
     <td><strong>Best Work Days/Times</strong></td>
