--- a/HW2/index.html
+++ b/HW2/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head><title>hw2</title>
+<head>
+  <title>Hobbs HW2</title>
   <link type="text/css" rel="stylesheet" href="assets/css/stylesheet.css"/>
-  <script src="assets/javascript/jshw2.js"/> 
-  <script src="assets/javascript/jquery-1.11.2.min.js"/>
+  <script src="assets/javascript/jshw2.js"><script/> 
+  <script src="assets/javascript/jquery-1.11.2.min.js"><script/>
 </head>
 <body>
-
-
-<
+<h3>Graduate Applicants to Industrial Engineering<h3/>
+	<table id=puietable>
+		<tbody>
+			<tr>
+				<th>Name</th>
+				<th>GPA</th>
+				<th>GRE Verbal</th>
+				<th>GRE Quant./th>
+				<th>Essay</th>
+				<th>Recommend</th>
+			</tr>
+			<tr>
+			
+			</tr>
+	</tbody>
 </body>
 <html>
