HTML updates to <table>

--- a/HW2/index.html
+++ b/HW2/index.html
@@ -8,19 +8,20 @@
 </head>
 <body>
 <h3>Graduate Applicants to Industrial Engineering<h3/>
-	<table id=puietable>
+	<table id="puIE">
 		<tbody>
 			<tr>
 				<th>Name</th>
 				<th>GPA</th>
 				<th>GRE Verbal</th>
-				<th>GRE Quant./th>
+				<th>GRE Quant</th>
 				<th>Essay</th>
 				<th>Recommend</th>
 			</tr>
 			<tr>
 			
 			</tr>
-	</tbody>
+		</tbody>
+	</table>
 </body>
 <html>
