--- a/HW2/index.html
+++ b/HW2/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Hobbs HW2</title>
-  <link type="text/css" rel="stylesheet" href="assets/css/stylesheet.css"/>
-  <script src="assets/javascript/jshw2.js"></script> 
-  <script src="assets/javascript/jquery-1.11.2.min.js"></script>
+  <link type="text/css" rel="stylesheet" href="HW2/assets/css/stylesheet.css"/>
+  <script src="HW2/assets/javascript/jshw2.js"></script> 
+  <script src="HW2/assets/javascript/jquery-1.11.2.min.js"></script>
 </head>
 <body>
 <h3>Graduate Applicants to Industrial Engineering<h3/>
