--- a/3homepage/index.html
+++ b/3homepage/index.html
@@ -23,15 +23,15 @@
 	<body>
 		<h1>Links</h1>	
 		<p>
-			<a href="http://hobbs12.github.io/590Exam1/3part1/index.html">Question 3.1</a>
+			<a href="hobbs12.github.io/590Exam1/3part1/index.html">Question 3.1</a>
 		</p>
 
 		<p>
-			<a href="http://hobbs12.github.io/590Exam1/3part2/index.html">Question 3.2</a>
+			<a href="hobbs12.github.io/590Exam1/3part2/index.html">Question 3.2</a>
 		</p>
 
 		<p>
-			<a href="http://hobbs12.github.io/590Exam1/3part3/index.html">Question 3.3</a>
+			<a href="hobbs12.github.io/590Exam1/3part3/index.html">Question 3.3</a>
 		</p>
 		<br>
 		<p>Amanda Hobbs
