Add reference to Murray's book

--- a/3part2/index.html
+++ b/3part2/index.html
@@ -36,6 +36,11 @@
 
 
 		<script type = "text/javascript">
+		
+		// SUBSTANTIAL pieces of code was written with understanding from and code borrowed from "Interactive Data Visualicaiton for the Web" by Scott Murray
+		// REFERENCE:
+		// Murray, S. (2013). Interactive Data Visualization for the Web. Sebastopol, CA: O’Reilly Media.
+
 			//Width and height
 			var w = 600;
 			var h = 250;
