ch-ch-ch-chaaaanges

--- a/3part1/index.html
+++ b/3part1/index.html
@@ -165,7 +165,7 @@
                 .attr("fill", "black")
                 .attr("transform","rotate(-90,10,"+(h/2+45)+")")
                 .attr("style","font-size:14px","font-family:sans-serif")
-                .text(function(){return "Number of Seniors";});
+                .text(function(){return "Number of Senior Students";});
 			svg.append("text")
                 .attr("x",190)
                 .attr("y",12)
