--- a/3part2/index.html
+++ b/3part2/index.html
@@ -286,7 +286,7 @@
 			//CALL Y AXIS
 			svg.append("g")
 				.attr("class", "axis")
-				.attr("transform", "translate(" + chartPadding + "," + chartPadding/2 + ")")
+				.attr("transform", "translate(" + (chartPadding + 5) + "," + chartPadding/2 + ")")
 				.call(yAxis);
 
 			//FINAL CODE ENDING
