move yaxis index one

--- a/3part1/index.html
+++ b/3part1/index.html
@@ -183,7 +183,7 @@
 			//CALL Y AXIS
 			svg.append("g")
 				.attr("class", "axis")
-				.attr("transform", "translate(" + chartPadding + "," + chartPadding/2 + ")")
+				.attr("transform", "translate(" + chartPadding + "," + (chartPadding/2 + 30) + ")")
 				.call(yAxis);
 
 
